feat(auth,ui): добавлена политика сессий «запомнить меня» и адаптивные фильтры плейлистов с сортировкой, фильтрацией по артисту и улучшениями UI/анимаций

--- a/music_api/templates/registration/login.html
+++ b/music_api/templates/registration/login.html
@@ -65,7 +65,7 @@
         </form>
 
         <div class="text-center mt-4">
-            <p class="mb-0">Нет аккаунта? <a href="{% url 'signup' %}">Зарегистрироваться</a></p>
+            <p class="mb-0">Нет аккаунта? <a href="{% url 'signup' %}" style="color: #ff6373 !important;"><span>Зарегистрироваться</span></a></p>
         </div>
     </section>
 </div>
