--- a/music_api/templates/registration/signup.html
+++ b/music_api/templates/registration/signup.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<div class="signup-page py-4">
+<div class="signup-page py-4 mb-3 mb-lg-0">
     <section class="signup-widget pre-animation">
         <div class="signup-icon" aria-hidden="true">
             <i class="bi bi-check-circle"></i>
@@ -84,7 +84,7 @@
         </form>
 
         <div class="text-center mt-4">
-            <p class="mb-0">Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></p>
+            <p class="mb-0">Уже есть аккаунт? <a href="{% url 'login' %}" style="color: #ff6373  !important;"><span>Войти</span></a></p>
         </div>
     </section>
 </div>
