--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -148,7 +148,7 @@
                                 </svg>
                             </button>
                         </div>
-                        <button class="btn custom-button ms-2" type="submit">Search</button>
+                        <button class="btn custom-button ms-2" type="submit">Поиск</button>
                     </form>
                 </div>
             </div>
@@ -163,7 +163,7 @@
 
     <footer class="footer-nav text-lg-start py-2 mt-auto">
         <div class="container d-flex justify-content-between align-items-center">
-            <span class="brand-span ms-lg-1 ms-0">
+            <span class="brand-span ms-lg-1 ms-0 d-inline-block flex-nowrap">
                 <span class="text-danger copyright">&copy;</span> RubySound.fm <span class="text-danger">♬</span>
             </span>
             <nav class="link-footer nav me-0 me-lg-1">
