--- a/music_api/templates/users/profile.html
+++ b/music_api/templates/users/profile.html
@@ -9,6 +9,14 @@
 {% block content %}
 
 <div class="container py-4">
+<nav aria-label="breadcrumb" class="mb-3 ruby-breadcrumb pre-animation">
+    <ol class="breadcrumb mb-0">
+        <li class="breadcrumb-item">
+            <a href="{% url 'home' %}">Главная</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Профиль</li>
+    </ol>
+</nav>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% if form.non_field_errors %}
