fix: выровнены стили мобильного фильтра плейлистов и восстановлена stagger-анимация при изменении фильтра

--- a/music_api/templates/users/playlists.html
+++ b/music_api/templates/users/playlists.html
@@ -16,7 +16,7 @@
             <li class="breadcrumb-item active" aria-current="page">Плейлисты</li>
         </ol>
     </nav>
-    <div class="d-lg-none mb-3">
+    <div class="d-lg-none mb-3 playlist-mobile-filter-wrap">
         <button
             class="btn btn-outline-danger btn-sm playlist-filter-mobile-trigger pre-animation"
             type="button"
