feat: добавлены публичные профили с лайками, уведомлениями, редактированием названия плейлистов и публичным UI/анимациями плейлистов

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -205,10 +205,12 @@
     <script src="/static/js/animation/neon_search_border.js"></script>
     <script src="/static/js/animation/profile_stagger_animation.js"></script>
     <script src="/static/js/animation/playlist_stagger_animation.js"></script>
+    <script src="/static/js/animation/public_profile_stagger_animation.js"></script>
 
     <!-- Фичи сайта (modules/features) -->
     <script src="/static/js/features/trending.js"></script>
     <script src="/static/js/features/year2025.js"></script>
+    <script src="/static/js/features/public_playlists_dashboard.js"></script>
     <script src="/static/js/features/music_search.js"></script>
 
     <!-- Модули поиска и UI-специфичные скрипты -->
@@ -216,6 +218,7 @@
     <script src="/static/js/UI/search_button_scroll.js"></script>
     <script src="/static/js/UI/clear_search_button.js"></script>
     <script src="/static/js/UI/playlists.js"></script>
+    <script src="/static/js/UI/public-playlist.js"></script>
 
     <!-- Утилиты -->
     <script src="/static/js/utils/utils.js"></script>
