--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -70,5 +70,10 @@
 
   <div id="year2025-container" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3"></div>
 
+  <section class="mt-5" id="public-playlists-dashboard-block">
+    <h2 class="mb-4 text-center popular-h2 pb-2 p-2">Публичные плейлисты</h2>
+    <div id="public-playlists-dashboard" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3"></div>
+  </section>
+
 </section>
 {% endblock %}
