--- a/music_api/templates/registration/login.html
+++ b/music_api/templates/registration/login.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" name="{{ form.remember.name }}" id="{{ form.remember.id_for_label }}">
+                <input type="checkbox" class="form-check-input ruby-check-input" name="{{ form.remember.name }}" id="{{ form.remember.id_for_label }}">
                 <label class="form-check-label" for="{{ form.remember.id_for_label }}">
                     Запомнить меня
                 </label>
