--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -68,3 +68,18 @@ input[type="search"]::-moz-search-cancel-button {
     background-position: 10px center;
     background-size: 16px;
 }
+
+.ruby-check-input {
+    accent-color: var(--color-primary-dark);
+    border-color: rgba(220, 53, 69, 0.6);
+}
+
+.ruby-check-input:checked {
+    background-color: var(--color-primary-dark);
+    border-color: var(--color-primary-dark);
+}
+
+.ruby-check-input:focus {
+    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.22);
+    border-color: var(--color-primary-dark);
+}
