--- a/music_api/templates/users/profile.html
+++ b/music_api/templates/users/profile.html
@@ -31,7 +31,7 @@
 
                 <div class="profile-avatar-shell d-flex flex-column align-items-center">
 
-                    <div class="profile-avatar-wrap  mb-4">
+                    <div class="profile-avatar-wrap mb-4">
                         {% if user.avatar %}
                             <img src="{{ user.avatar.url }}" alt="Avatar" class="profile-avatar">
                         {% else %}
@@ -203,8 +203,10 @@
                 </section>
 
                 <section class="profile-widget pre-animation" id="block-like-notifications">
-                    <i class="bi bi-heart fs-4 text-danger"></i>
-                    <div class="profile-widget-title fs-5">Лайки публичного избранного</div>
+                    <div class="d-flex align-items-center flex-nowrap gap-2 mb-3">
+                        <i class="bi bi-heart fs-4 text-danger"></i>
+                        <div class="profile-widget-title fs-5 text-nowrap mb-0">Лайки публичного избранного</div>
+                    </div>
 
                     {% if like_notifications %}
                         <div class="d-flex flex-column gap-2">
