--- a/static/css/pages/playlists.css
+++ b/static/css/pages/playlists.css
@@ -45,8 +45,12 @@
     justify-content: center;
 }
 
+.search-mobile-filter-wrap {
+    justify-content: flex-start;
+}
+
 .playlist-filter-offcanvas {
-    height: min(62vh, 500px);
+    height: min(78vh, 680px);
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
     background: black;
@@ -88,8 +92,17 @@
     color: #fff;
 }
 
+.playlist-filter-offcanvas [data-playlist-reset-filters] {
+    color: #fff;
+}
+
+.playlist-filter-offcanvas [data-search-reset-filters],
+.playlist-filter-offcanvas [data-search-reset-query] {
+    color: #fff;
+}
+
 .playlist-filter-offcanvas .btn-close {
-    --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23e52f2f'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e");
+    --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23d5d7db'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e");
     opacity: 1 !important;
     filter: none !important;
 }
@@ -239,7 +252,7 @@
     }
 
     .playlist-filter-offcanvas {
-        height: min(70vh, 540px);
+        height: min(82vh, 760px);
     }
 
     .track-playlist {
