feat: добавлены фильтры и offcanvas на страницу поиска, редирект пустого поиска на главную

--- a/music_api/templates/index.html
+++ b/music_api/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container mt-md-3">
-    <nav aria-label="breadcrumb" class="mb-3 mt-3 ruby-breadcrumb search-breadcrumb-center pre-animation">
+    <nav id="search-breadcrumb" aria-label="breadcrumb" class="mb-3 mt-3 ruby-breadcrumb search-breadcrumb-center pre-animation">
         <ol class="breadcrumb mb-0">
             <li class="breadcrumb-item">
                 <a href="{% url 'home' %}">Главная</a>
